--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
-    "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
@@ -76,8 +75,12 @@
   ],
   "devDependencies": {
     "node-sass": "^4.9.4",
+    "react-bootstrap": "^0.32.4",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
-    "webpack": "^4.23.1"
+    "webpack": "^4.23.1",
+    "webpack-provide-global-plugin": "0.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
