--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
