--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^2.0.0",
+    "react-dates": "^18.2.2",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
+    "react-input-calendar": "^0.5.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.5.0",
     "redux-form": "^7.4.2",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
