--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -50,7 +52,9 @@
     "react-dates": "^18.2.2",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
+    "react-form-material-ui": "^1.2.0",
     "react-input-calendar": "^0.5.4",
+    "react-moment": "^0.8.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.5.0",
