Added functionality to set user image in local storage

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
+    "fusioncharts": "^3.13.2-sr.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -53,6 +54,7 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-form-material-ui": "^1.2.0",
+    "react-fusioncharts": "^2.0.7",
     "react-input-calendar": "^0.5.4",
     "react-moment": "^0.8.4",
     "react-router": "^4.3.1",
