--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,11 @@
 /coverage
 
 # production
-src/*
-public/*
-build/static/css/*.map
-build/static/js/*.map
+/build
+# src/*
+# public/*
+# build/static/css/*.map
+# build/static/js/*.map
 
 # misc
 .DS_Store
