--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-fusioncharts": "^2.0.7",
+    "react-google-maps": "^9.4.5",
     "react-moment": "^0.8.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
